--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
     <head>
-    <title> Viagem ao Canadá </title>
+    <title> Viagem ao Canadá BLOG </title>
     <style>
         img{width: 1020;
             height: 400px;
         }
         h1{
             color:blue;
-            
+
         }
     </style>
 <head>
@@ -18,7 +18,7 @@
 <body>
     <h1>Explorando o Canadá: Um Destino para Conhecer, Trabalhar e Estudar</h1>
     <p>O Canadá é um destino fascinante para quem deseja explorar novos horizontes, seja para turismo, trabalho ou estudos. Com sua vasta paisagem que vai desde as imponentes Montanhas Rochosas até as cidades cosmopolitas como Toronto e Vancouver, o país oferece uma variedade de experiências únicas. Para os turistas, as belezas naturais e os parques nacionais são um convite para aventuras ao ar livre e a imersão em culturas diversificadas.</p>
-
+ <img src="aa.jpeg">
     <p>Além disso, o Canadá é um excelente local para trabalhar e estudar. O país possui um sistema educacional renomado, com universidades de alta qualidade e programas inovadores que atraem estudantes de todo o mundo. Para profissionais, o mercado canadense oferece diversas oportunidades em setores como tecnologia, saúde e engenharia, sustentado por uma economia estável e políticas de imigração favoráveis. Portanto, seja para um período de estudo, uma nova etapa na carreira ou simplesmente para conhecer, o Canadá é uma escolha enriquecedora e promissora.</p>
 </body>
 </html>
