--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
             color:blue;
 
         }
+        .center {
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        
+        }
     </style>
 <head>
     <meta charset="UTF-8">
